--- a/less/footer.less
+++ b/less/footer.less
@@ -4,7 +4,7 @@
     margin: 1% 5%;
 
     @media @mobil{
-        display: none;
+       justify-content: center;
     }
 
     p{
